--- a/frontend/placeconnect/src/index.css
+++ b/frontend/placeconnect/src/index.css
@@ -1,1 +1,13 @@
 @import "tailwindcss";
+
+html {
+  @apply scroll-smooth;
+}
+
+body {
+  @apply font-sans text-slate-800 bg-slate-50;
+}
+
+input {
+  @apply px-4 py-2 w-full;
+}
